sass/styles.scss
@import './scss_vars';

* {
  font-family: 'Karla', 'Futura', 'Trebuchet MS', sans-serif;
}

a {
  font-size: 1.2em;
  color: #fff;
  transition: all .3s;
  letter-spacing: .05em;
  text-align: center;

  &:hover {
    color: $magenta;
    transition: all .3s;
  }
}

.sky {
  position: relative;
  z-index: -2;
  height: 900px;
  background-image: linear-gradient(to right,rgba(194, 2, 79, 1), rgba(255, 89, 79, 1));
}

.sky_effect {
  position: absolute;
  z-index: -1;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: $gold;
  animation: transition_opacity 30s infinite;
}

#city {
  position: absolute;
  z-index: -1;
  top: -60px;
  width: 990px;
}

#cloud_1 {
  position: absolute;
  z-index: 2;
  top: 200px;
  animation: cloud_1 90s infinite linear;
}

#cloud_2 {
  position: absolute;
  z-index: 2;
  top: 225px;
  animation: cloud_2 90s infinite linear;
}

@keyframes cloud_1 {
  0% {transform: translateX(-1000px);}
  100% {transform: translateX(2000px);}
}

@keyframes cloud_2 {
  0% {transform: translateX(-500px); opacity: 1;}
  50% {transform: translateX(2000px); opacity: 0;}
  51% {transform: translateX(-1000px); opacity: 0;}
  100% {transform: translateX(-500px); opacity: 1;}
}


.hero_div {
  position: absolute;
  z-index: 3;
  top: 200px;
  left: 0;
  right: 0;
  display: block;
  width: 70%;
  margin: auto;

  .hero_text {
    text-align: right;
    font-size: 7em;
    color: #fff;
    font-weight: 600;
  }

  .call_to_action {
    margin-top: 50px;
    float: right;
    width: 50%;
    font-weight: 600;
    font-size: 1.5em;
  }
}

.page_segue {
  position: absolute;
  z-index: 1;
  top: 675px;
  width: 100%;
  height: 1000px;
  background-color: #fff;
  -webkit-clip-path: polygon(0 14%, 100% 0, 100% 100%, 0% 100%);
  clip-path: polygon(0 14%, 100% 0, 100% 100%, 0% 100%);  
}

@keyframes transition_opacity {
  0% {opacity: 1;}
  50% {opacity: 0;}
  100% {opacity: 1;}
}

@keyframes transition_color {
  0% {color: $gold;}
  50% {color: $magenta;}
  100% {color: $gold;}
}

.call_to_action {
  border: 2px solid #fff;

  &:hover {
    color: $magenta;
    transition: all .3s;
    letter-spacing: .05em;
    background-color: #fff;
    animation: transition_color 30s infinite;
  }
}

.navigation {
  position: fixed;
  z-index: 1;
  width: 100%;
  padding: 25px;
  background: transparent;

  .logo {
    width: 200px;
  }
}

@media screen and (max-width: 678px) {
  ul.nav.d-flex.justify-content-right {
    display: none !important;
  }

  .page_segue {
    top: 550px;
  }

  #city {
    width: 500px;
    top: 250px;
    left: -20px;
  }

  .hero_div {
    top: 250px;
    width: 80%;

    .hero_text {
      text-align: center;
      font-size: 3em;
    }

    .call_to_action {
      float: none;
      width: 250px;
      margin: 25px auto;
    }
  }
}

@media screen and (min-width: 679px) and (max-width: 1000px) {

  .hero_div .hero_text {
    font-size: 4em;
  }
}

